--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.0 1996/04/17 18:17:37 mj Exp $
+#    $Id: Makefile,v 4.1 1996/05/03 19:18:42 mj Exp $
 #
 #    Makefile for FIDOGATE scripts/
 #
@@ -24,3 +24,5 @@ all clean depend install::
 
 clean::
 	rm -f *~ *.bak *.o tags TAGS core paths.tmp
+
+check:
