--- a/src/common/Makefile
+++ b/src/common/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.0 1996/04/17 18:17:38 mj Exp $
+#    $Id: Makefile,v 4.1 1996/05/03 19:18:43 mj Exp $
 #
 #    Makefile for FIDOGATE src/common/
 #
@@ -23,7 +23,7 @@ OBJS		= address.o aliases.o areas.o areasbbs.o binkley.o\
 		  message.o misc.o msgid.o node.o outpkt.o packet.o passwd.o\
 		  parsedate.o read.o rfcaddr.o rfcheader.o routing.o\
 		  sequencer.o textlist.o version.o wildmat.o\
-		  xalloc.o xstrtok.o mime.o tick.o
+		  xalloc.o xstrtok.o mime.o tick.o parsenode.o
 
 LIBOBJS		= $(OBJS:%=$(LIB)(%))
 
@@ -43,7 +43,19 @@ install:
 
 clean:
 	rm -f $(PROGS) $(LIB)
+	rm -f testparse
 	rm -f *~ *.bak *.o tags TAGS core
+
+
+#
+# Test programs
+#
+check:		testparse
+
+testparse:	testparse.o
+	$(CC) $(LFLAGS) -o testparse testparse.o $(LIBS)
+testparse.o:	parsenode.c
+	$(CC) $(CFLAGS) $(LOCAL_CFLAGS) -DTEST -c parsenode.c -o testparse.o
 
 
 #
