--- a/src/include/Makefile
+++ b/src/include/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.0 1996/04/17 18:17:41 mj Exp $
+#    $Id: Makefile,v 4.1 1996/05/03 19:18:45 mj Exp $
 #
 #    Makefile for FIDOGATE src/include/
 #
@@ -37,5 +37,7 @@ install:
 
 clean:
 	rm -f *~ *.bak *.o tags TAGS core paths.tmp
+
+check:
 
 depend:
