--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.1 1996/05/03 19:18:42 mj Exp $
+#    $Id: Makefile,v 4.2 1996/06/09 10:49:00 mj Exp $
 #
 #    Makefile for FIDOGATE scripts/
 #
@@ -19,8 +19,12 @@ include $(TOPDIR)/rules.make
 SUBDIRS		= filebase maintenance misc nodelist outbound run
 
 
-all clean depend install::
+all clean depend::
 	for d in $(SUBDIRS); do $(MAKE) -C $$d $@; done 
+
+install::
+	@echo "***** make install NOT done for scripts subdirs *****"
+	@echo "Use make install in the individual subdirs!"
 
 clean::
 	rm -f *~ *.bak *.o tags TAGS core paths.tmp
