--- a/sendmail/cf/Makefile
+++ b/sendmail/cf/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.1 1996/09/22 12:23:30 mj Exp $
+#    $Id: Makefile,v 4.2 1996/09/22 20:12:36 mj Exp $
 #
 #    Makefile for FIDOGATE sendmail/cf/
 #
@@ -28,8 +28,8 @@ install:
 
 install-orodruin:
 	install -g root -o root -m 644 orodruin.cf          /etc/sendmail.cf
-	install -g root -o root -m 644 mailertable-orodruin /etc/mail
-	install -g root -o root -m 644 rewrite-orodruin     /etc/mail
+	install -g root -o root -m 644 mailertable-orodruin /etc/mail/mailertable
+	install -g root -o root -m 644 rewrite-orodruin     /etc/mail/rewrite
 	install -g root -o root -m 755 mkmaildb             /etc/mail
 	/etc/mail/mkmaildb
 	killall sendmail
@@ -37,8 +37,8 @@ install-orodruin:
 
 install-morannon:
 	install -g root -o root -m 644 morannon.cf          /etc/sendmail.cf
-	install -g root -o root -m 644 mailertable-morannon /etc/mail
-	install -g root -o root -m 644 rewrite-morannon     /etc/mail
+	install -g root -o root -m 644 mailertable-morannon /etc/mail/mailertable
+	install -g root -o root -m 644 rewrite-morannon     /etc/mail/rewrite
 	install -g root -o root -m 755 mkmaildb             /etc/mail
 	/etc/mail/mkmaildb
 	killall sendmail
