--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,5 +1,5 @@
 #
-# $Id: Makefile,v 4.4 1996/05/03 19:18:42 mj Exp $
+# $Id: Makefile,v 4.5 1996/10/06 15:18:16 mj Exp $
 #
 # Makefile FIDOGATE doc/
 #
@@ -9,15 +9,22 @@ TOPDIR		= ..
 include $(TOPDIR)/config.make
 include $(TOPDIR)/rules.make
 
+SUBDIRS		= html
 
-all:		fidogate.info fidogate.txt
+
+all::		fidogate.info fidogate.txt
+
+all clean veryclean check depend install::
+	for d in $(SUBDIRS); do \
+	  if [ -f $$d/Makefile ]; then $(MAKE) -C $$d $@ || exit 1; fi; \
+	done
 
 
 doc:		fidogate.info fidogate.txt fidogate.ps
 
 
 fidogate.info:	fidogate.texi
-	makeinfo fidogate.texi
+	-makeinfo fidogate.texi
 
 fidogate.txt:	fidogate.info
 	./info2txt fidogate.info-* >fidogate.txt
@@ -29,17 +36,17 @@ fidogate.ps:	fidogate.dvi
 	dvips fidogate -o
 
 
-clean:
+clean::
 	rm -f *~ *.bak *.o tags TAGS core
 	rm -f *.cp *.cps *.fn *.fns *.ky *.kys *.pg *.pgs *.toc *.aux
 	rm -f *.tp *.tps *.vr *.vrs *.log
 
-veryclean:	clean
+veryclean::	clean
 	rm -f fidogate.info* fidogate.ps fidogate.dvi fidogate.txt
 
-check:
+check::
 
-install:
+install::
 	$(INSTALL_DATA) fidogate.info* $(INFODIR)
 
-depend:
+depend::
