--- a/scripts/maintenance/Makefile
+++ b/scripts/maintenance/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.1 1996/08/25 10:16:06 mj Exp $
+#    $Id: Makefile,v 4.2 1997/02/09 10:04:22 mj Exp $
 #
 #    Makefile for FIDOGATE scripts/filebase/
 #
@@ -25,6 +25,7 @@ all:		$(PROGS)
 
 install:
 	$(INSTALL_PROG)   newsyslog       $(BINDIR)
+	$(INSTALL_PROG)   sendmailstat    $(BINDIR)
 
 
 clean:
