--- a/scripts/maintenance/Makefile
+++ b/scripts/maintenance/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.2 1997/02/09 10:04:22 mj Exp $
+#    $Id: Makefile,v 4.3 1997/04/19 11:41:47 mj Exp $
 #
 #    Makefile for FIDOGATE scripts/filebase/
 #
@@ -16,7 +16,8 @@ include $(TOPDIR)/config.make
 include $(TOPDIR)/rules.make
 
 
-PROGS		= logmaint logreport logstat newsyslog rc.fidonet sendmailstat
+PROGS		= logmaint logreport logstat\
+		  newsyslog rc.fidonet sendmailstat
 
 
 all:		$(PROGS)
@@ -26,6 +27,9 @@ all:		$(PROGS)
 install:
 	$(INSTALL_PROG)   newsyslog       $(BINDIR)
 	$(INSTALL_PROG)   sendmailstat    $(BINDIR)
+	$(INSTALL_PROG)   logmaint        $(LIBDIR)
+	$(INSTALL_PROG)   logreport       $(LIBDIR)
+	$(INSTALL_PROG)   logstat         $(LIBDIR)
 
 
 clean:
