--- a/doc/gatebau/Makefile
+++ b/doc/gatebau/Makefile
@@ -1,5 +1,5 @@
 #
-# $Id: Makefile,v 1.2 1996/12/29 12:16:37 mj Exp $
+# $Id: Makefile,v 1.3 1997/05/01 17:49:49 mj Exp $
 #
 # Makefile FIDOGATE doc/gatebau/
 #
@@ -15,6 +15,7 @@ all:		msgid.html msgid.tex msgid.txt
 
 msgid.html:	msgid.sgml
 	-sgml2html msgid.sgml
+	./post-html.pl msgid*.html
 
 msgid.tex:	msgid.sgml
 	-sgml2latex -2e -a msgid.sgml
