--- a/scripts/nodelist/Makefile
+++ b/scripts/nodelist/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.3 1997/06/21 21:16:41 mj Exp $
+#    $Id: Makefile,v 4.4 1997/07/25 21:01:35 mj Exp $
 #
 #    Makefile for FIDOGATE scripts/filebase/
 #
@@ -17,7 +17,7 @@ include $(TOPDIR)/rules.make
 
 
 PROGS		= latest\
-		  nl-del nl-diff nl-html nl-isdn nl-print\
+		  nl-autoupd nl-del nl-diff nl-html nl-isdn nl-print\
 		  nl-2hosts nl-2routing
 
 
@@ -26,6 +26,8 @@ all:		$(PROGS)
 
 
 install:
+	$(INSTALL_PROG)   latest      $(BINDIR)
+	$(INSTALL_PROG)   nl-autoupd  $(BINDIR)
 	$(INSTALL_PROG)   nl-del      $(BINDIR)
 	$(INSTALL_PROG)   nl-diff     $(BINDIR)
 
