--- a/src/gate/Makefile
+++ b/src/gate/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.3 1997/07/25 21:01:41 mj Exp $
+#    $Id: Makefile,v 4.4 1997/08/20 21:05:03 mj Exp $
 #
 #    Makefile for FIDOGATE src/gate/
 #
@@ -34,7 +34,7 @@ install:
 	$(INSTALL_PROG) ftninrecomb $(LIBDIR)
 
 
-clean:
+clean veryclean:
 	rm -f $(PROGS)
 	rm -f *~ *.bak *.o tags TAGS core paths.tmp
 
