--- a/src/toss/Makefile
+++ b/src/toss/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.7 1997/07/25 21:01:43 mj Exp $
+#    $Id: Makefile,v 4.8 1997/08/20 21:05:05 mj Exp $
 #
 #    Makefile for FIDOGATE src/toss/
 #
@@ -58,7 +58,7 @@ install:
 
 
 
-clean:
+clean veryclean:
 	rm -f $(PROGS)
 	rm -f testhistory
 	rm -f *~ *.bak *.o tags TAGS core paths.tmp
