--- a/sendmail/cf/Makefile
+++ b/sendmail/cf/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.5 1997/10/05 13:43:32 mj Exp $
+#    $Id: Makefile,v 4.6 1997/11/16 15:53:26 mj Exp $
 #
 #    Makefile for FIDOGATE sendmail/cf/
 #
@@ -14,6 +14,10 @@ TOPDIR		= ../..
 
 include $(TOPDIR)/config.make
 include $(TOPDIR)/rules.make
+
+#M4OPTIONS	= -DconfFIDOGATE_LIBDIR=$(LIBDIR)
+M4OPTIONS	= -DconfFIDOGATE_LIBDIR=$(LIBDIR) \
+		  -DconfFIDOGATE_OUTDIR=%S/outpkt/mail
 
 
 CF		= orodruin.cf orodruin-smtp.cf orodruin-check.cf\
