--- a/src/common/Makefile
+++ b/src/common/Makefile
@@ -1,6 +1,6 @@
 #:ts=8
 #
-#    $Id: Makefile,v 4.6 1998/01/13 20:33:49 mj Exp $
+#    $Id: Makefile,v 4.7 1998/01/18 09:47:37 mj Exp $
 #
 #    Makefile for FIDOGATE src/common/
 #
@@ -68,7 +68,7 @@ OBJS		= address.o \
 LIBOBJS		= $(OBJS:%=$(LIB)(%))
 
 
-all:		cf_funcs.mak $(LIB)
+all:		cf_funcs.mak cf_abbrev.mak $(LIB)
 
 
 $(LIB):		$(LIBOBJS)
@@ -82,6 +82,10 @@ parsedate.c:	parsedate.y
 cf_funcs.mak:	$(TOPDIR)/config.make $(TOPDIR)/subst.pl
 	$(PERL) $(TOPDIR)/subst.pl -c$(TOPDIR)/config.make -C >cf_funcs.mak
 	diff cf_funcs.mak cf_funcs.c >/dev/null || cp cf_funcs.mak cf_funcs.c
+
+cf_abbrev.mak:	$(TOPDIR)/config.make $(TOPDIR)/subst.pl
+	$(PERL) $(TOPDIR)/subst.pl -c$(TOPDIR)/config.make -A >cf_abbrev.mak
+	diff cf_abbrev.mak cf_abbrev.c >/dev/null || cp cf_abbrev.mak cf_abbrev.c
 
 install:
 
