--- a/test/cf/ffx.conf
+++ b/test/cf/ffx.conf
@@ -1,6 +1,6 @@
 #:ts=8
 #
-# $Id: config.ffx,v 4.2 1998/01/18 10:58:09 mj Exp $
+# $Id: ffx.conf,v 4.1 1998/01/18 12:30:24 mj Exp $
 #
 # FIDOGATE test configuration
 #
@@ -9,9 +9,9 @@
 #
 
 #
-# Include common stuff (%L = LIBDIR)
+# Include common stuff
 #
-include		%L/config.common
+include		%C/common.conf
 
 
 #
