--- a/test/cf/gate.conf
+++ b/test/cf/gate.conf
@@ -1,6 +1,6 @@
 #:ts=8
 #
-# $Id: config.gate,v 4.13 1998/01/18 10:58:09 mj Exp $
+# $Id: gate.conf,v 4.1 1998/01/18 12:30:25 mj Exp $
 #
 # FIDOGATE test configuration
 #
@@ -9,9 +9,9 @@
 #
 
 #
-# Include common stuff (%L = LIBDIR)
+# Include common stuff
 #
-include		%C/config.common
+include		%C/common.conf
 
 
 #
@@ -220,7 +220,7 @@ RFCLevel		1
 #
 #    %s is replaced with the envelope sender
 #
-FTNInSendmail	/usr/lib/sendmail -odb -oee -oi -f%s -oMrFTN -t
+FTNInSendmail	/usr/lib/sendmail -odb -oee -oi -oMrFTN -t
 
 #
 # rnews program path
