--- a/test/cf/toss.conf
+++ b/test/cf/toss.conf
@@ -1,6 +1,6 @@
 #:ts=8
 #
-# $Id: config.main,v 4.7 1998/01/18 10:58:09 mj Exp $
+# $Id: toss.conf,v 4.1 1998/01/18 12:30:25 mj Exp $
 #
 # FIDOGATE test configuration
 #
@@ -9,9 +9,9 @@
 #
 
 #
-# Include common stuff (%L = LIBDIR)
+# Include common stuff
 #
-include		%L/config.common
+include		%C/common.conf
 
 
 #
@@ -24,13 +24,13 @@ Address		242:1000/5
 #
 # AREAS.BBS EchoMail distribution list
 #
-AreasBBS	%L/areas.bbs
+AreasBBS	%V/areas.bbs
 
 
 #
 # FAREAS.BBS file distribution list
 #
-FAreasBBS	%L/fareas.bbs
+FAreasBBS	%V/fareas.bbs
 
 
 #
