--- a/test/cf/toss.conf
+++ b/test/cf/toss.conf
@@ -1,6 +1,6 @@
 #:ts=8
 #
-# $Id: toss.conf,v 4.1 1998/01/18 12:30:25 mj Exp $
+# $Id: toss.conf,v 4.2 1998/01/18 15:33:18 mj Exp $
 #
 # FIDOGATE test configuration
 #
@@ -11,7 +11,7 @@
 #
 # Include common stuff
 #
-include		%C/common.conf
+include		../cf/common.conf
 
 
 #
